--- a/bio.html
+++ b/bio.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>_ashley_sagar_»</title>
+  <title>bio</title>
   <meta name="author" content="ashley sagar">
   <meta name="description" content="A website containing things that I do and have made.">
 <!--  <meta name="viewport" content="width=device-width, inital-scale=1.0">
@@ -29,8 +29,11 @@
 <a href="audio.html">audio</a>
 <a href="visual.html">visual</a>
 <a href="cv.html">cv</a>
-<a href="bio.html">bio</a>
 <a href="contact_form.html">booking</a>
+
+
+
+
 
 </body>
 
