--- a/bio.html
+++ b/bio.html
@@ -29,7 +29,7 @@
 <a href="audio.html">audio</a>
 <a href="visual.html">visual</a>
 <a href="cv.html">cv</a>
-<a href="contact_form.html">booking</a>
+</h3><a href="contact_form.html">booking</a>
 
 
 
