--- a/bio.html
+++ b/bio.html
@@ -29,10 +29,11 @@
 <a href="audio.html">audio</a>
 <a href="visual.html">visual</a>
 <a href="cv.html">cv</a>
-</h3><a href="contact_form.html">booking</a>
+<a href="contact_form.html">booking</a>
 
 
 
+<h2>bio</h2>
 
 
 </body>
