--- a/bio.html
+++ b/bio.html
@@ -18,22 +18,22 @@
 
 <body>
 
-<h1>
+  <div><h1>
   <a href="index.html">Ashley Sagar</a>
-</h1>
+</h1></div>
   
   <!-- ///////////////////////////////////////////////////// -->
   <!-- /////////////////LINKS TO OTHER PAGES////////////////// -->
 
 
-<a href="audio.html">audio</a>
-<a href="visual.html">visual</a>
-<a href="cv.html">cv</a>
-<a href="contact_form.html">booking</a>
+  <div><a href="audio.html">audio</a></div>
+<div><a href="visual.html">visual</a></div>
+<div><a href="cv.html">cv</a></div>
+<div><a href="contact_form.html">booking</a></div>
 
 
 
-<h2>bio</h2>
+<div><h2>bio</h2></div>
 
 
 </body>
