--- a/bio.html
+++ b/bio.html
@@ -18,7 +18,7 @@
 
 <body>
 
-  <div><h1>
+  <div class=name><h1>
   <a href="index.html">Ashley Sagar</a>
 </h1></div>
   
@@ -26,14 +26,15 @@
   <!-- /////////////////LINKS TO OTHER PAGES////////////////// -->
 
 
+  <section class=menu>
   <div><a href="audio.html">audio</a></div>
 <div><a href="visual.html">visual</a></div>
 <div><a href="cv.html">cv</a></div>
 <div><a href="contact_form.html">booking</a></div>
+  </section>
 
 
-
-<div><h2>bio</h2></div>
+<div class=title><h2>bio</h2></div>
 
 
 </body>
