--- a/bio.html
+++ b/bio.html
@@ -18,7 +18,7 @@
 
 <body>
 
-  <div class=name><h1>
+  <div><h1>
   <a href="index.html">Ashley Sagar</a>
 </h1></div>
   
@@ -26,7 +26,7 @@
   <!-- /////////////////LINKS TO OTHER PAGES////////////////// -->
 
 
-  <section class=menu>
+  <section>
   <div><a href="audio.html">audio</a></div>
 <div><a href="visual.html">visual</a></div>
 <div><a href="cv.html">cv</a></div>
@@ -34,7 +34,7 @@
   </section>
 
 
-<div class=title><h2>bio</h2></div>
+<div><h2>bio</h2></div>
 
 
 </body>
