cleaning up css

--- a/bio.html
+++ b/bio.html
@@ -1,43 +1,49 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
 
-<head>
-  <meta charset="utf-8">
-  <title>bio</title>
-  <meta name="author" content="ashley sagar">
-  <meta name="description" content="A website containing things that I do and have made.">
-<!--  <meta name="viewport" content="width=device-width, inital-scale=1.0">
--->
-  <link rel="stylesheet" href="css/style.css">
-</head>
+  <head>
+    <meta charset="utf-8">
+    <title>bio</title>
+    <meta name="author" content="ashley sagar">
+    <meta name="description" content="A website containing things that I do and have made.">
+    <!--  <meta name="viewport" content="width=device-width, inital-scale=1.0">
+      -->
+    <link rel="stylesheet" href="css/style.css">
+  </head>
 
 
 
 
 
 
-<body>
+  <body>
 
-  <div><h1>
-  <a href="index.html">Ashley Sagar</a>
-</h1></div>
-  
-  <!-- ///////////////////////////////////////////////////// -->
-  <!-- /////////////////LINKS TO OTHER PAGES////////////////// -->
+    <header>
+      <div><h1><a href="index.html">Ashley Sagar</a></h1></div>
+      
+      <!-- ///////////////////////////////////////////////////// -->
+      <!-- /////////////////LINKS TO OTHER PAGES////////////////// -->
 
-
-  <section>
-  <div><a href="audio.html">audio</a></div>
-<div><a href="visual.html">visual</a></div>
-<div><a href="cv.html">cv</a></div>
-<div><a href="contact_form.html">booking</a></div>
-  </section>
-
-
-<div><h2>bio</h2></div>
+      <section>
+	<div><a href="audio.html">audio</a></div>
+	<div><a href="visual.html">visual</a></div>
+	<div><a href="cv.html">cv</a></div>
+	<div><a href="contact_form.html">booking</a></div>
+      </section>
+    </header>
 
 
-</body>
+    <main>
+      <div><h2>bio</h2></div>
+    </main>
+
+
+
+    <footer>
+      <p>©2025 green.road.studios. All rights reserved.</p>
+    </footer>
+
+  </body>
 
 </html>
 
