--- a/bio.html
+++ b/bio.html
@@ -19,7 +19,7 @@
   <body>
 
     <header>
-      <div><h1><a href="index.html">Ashley Sagar</a></h1></div>
+      <div><h1><a href="index.html">ashley sagar</a></h1></div>
       
       <!-- ///////////////////////////////////////////////////// -->
       <!-- /////////////////LINKS TO OTHER PAGES////////////////// -->
