--- a/bio.html
+++ b/bio.html
@@ -19,16 +19,20 @@
   <body>
 
     <header>
-      <div><h1><a href="index.html">ashley sagar</a></h1></div>
+      <div class="my-name"><h1><a href="index.html">ashley sagar</a></h1></div>
       
       <!-- ///////////////////////////////////////////////////// -->
       <!-- /////////////////LINKS TO OTHER PAGES////////////////// -->
 
       <section>
-	<div><a href="audio.html">audio</a></div>
-	<div><a href="visual.html">visual</a></div>
-	<div><a href="cv.html">cv</a></div>
-	<div><a href="contact_form.html">booking</a></div>
+	<nav class="primary-navigation" aria-label="Primary Navigation">
+	  <ul>
+	    <li><a href="audio.html">audio</a></li>
+	    <li><a href="visual.html">visual</a></li>
+	    <li><a href="cv.html">cv</a></li>
+	    <li><a href="contact_form.html">booking</a></li>
+	  </ul>
+	</nav>
       </section>
     </header>
 
