--- a/bio.html
+++ b/bio.html
@@ -39,6 +39,15 @@
 
     <main>
       <div><h2>bio</h2></div>
+
+
+      <section>
+	<div>
+	  <h1>page under construction</h1>
+	</div>
+      </section>
+      
+
     </main>
 
 
