--- a/bio.html
+++ b/bio.html
@@ -6,8 +6,8 @@
     <title>bio</title>
     <meta name="author" content="ashley sagar">
     <meta name="description" content="A website containing things that I do and have made.">
-    <!--  <meta name="viewport" content="width=device-width, inital-scale=1.0">
-      -->
+    <meta name="viewport" content="width=device-width, inital-scale=1.0">
+    
     <link rel="stylesheet" href="css/style.css">
   </head>
 
