--- a/bio.html
+++ b/bio.html
@@ -50,10 +50,12 @@
 
     </main>
 
-
-
     <footer>
-      <p>©2025 green.road.studios. All rights reserved.</p>
+      <div class="footer-link">
+	<p>©2026 design by <a href="https://www.greenroadstudios.co.uk/" target="_blank" >green road studios.</a> All rights reserved.</p>
+      </div>
+
+      
     </footer>
 
   </body>
